--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,35 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Django News Project</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Russo+One&display=swap" rel="stylesheet">
+
+	<link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
 </head>
 <body>
-	<div class="">
+	<div class="page-header">
 		<h1><a href="/">Django News Project</a></h1>
 	</div>
+		<div class="content container">
 {% for post in posts %}
-	<div class="">
-		<hr>
-		<h2><a href="#">{{ post.title }}</a></h2>
-		<p>{{ post.text|linebreaksbr }}</p>
-		<p>published: {{ post.created_date }}</p>
-		<hr>
-	</div>
+			<div class="post">
+				<h2><a href="#">{{ post.title }}</a></h2>
+				<p>{{ post.text|linebreaksbr }}</p>
+				<p>published: {{ post.created_date }}</p>
+				<hr>
+			</div>
 {% endfor %}
+		</div>
 </body>
+
+Dynamic pages
+
 </html>
+
+$ pip3.6 install --user pythonanywhere
+$ pa_autoconfigure_django.py http://....
