--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -22,6 +22,12 @@ h2 a {
 	font-family: 'Russo One', sans-serif;
 }
 
+.hover-title:hover {
+	transform: translateX(100px);
+	transform: rotate(360deg);
+	transition: 2s;
+}
+
 .page-header {
 	background-color: #ff9400;
 	margin-top: 0;
